@@ -375,6 +375,7 @@ duplicate_media_upload "A media object with the filename '$filename' already exi
   file_write_error          "A file-system error has occured attempting to write to '$path'.  Please contact operations and request that they remedy the problem."
   deployed                  "Deployed template $id."
   zero_size_output          "The output of story $story_id in category $category_url was zero-length.  The culprit may be an empty $story_class.tmpl."
+  unknown_publish_error     "An unknown error occurred when trying to publish. Please contact your system administrator for more details."
 </Module>
 
 <Module "Krang::CGI::ListGroup">
